Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139605

windows11style: crash when drawing slider due to failure to check for null value

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.10.0
    • 6.9
    • Widgets: Styles
    • None
    • Windows
    • a39047eeb6202a3c081d2441be9dc4f3d017fb97, 20ffc3252 (6.10)

      On line 183 of qwindows11style.cpp, styleOption is set (https://code.qt.io/cgit/qt/qtbase.git/tree/src/plugins/styles/modernwindows/qwindows11style.cpp). However there is no check that it's not NULL before it's used, which is leading to a crash in my application when drawing a slider.

      I don't have a MWE but hopefully this is obvious enough to be fixed without a MWE. 

      There may also be improper uses on lines 212-213, 410, 412, and 415. There are places in the same file where styleObject is checked, on lines 696, 736, and 860.

        For Gerrit Dashboard: QTBUG-139605
        # Subject Branch Project Status CR V

            wladimir.leuschner Wladimir Leuschner
            aclight Adam Light
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change