QWindows11Style: Rework animation logic and add guards for styleObject

Previously it was assumed, that QStyleOption::styleObject is never NULL,
this can lead to crashes. This patch adds more guards for usage of
styleObject and in case of disabled animations or not existent
styleObject creates the visual state representation without usage of
styleObject

Fixes: QTBUG-139605
Pick-to: 6.9
Change-Id: I0e716252a5db600e68e74ceb9b7d4aad1761e3e3
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>
(cherry picked from commit a39047eeb6202a3c081d2441be9dc4f3d017fb97)